# python_basic_otus-project

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-tests.yml
horseshop/: manage.py
horseshop/category/: admin.py  models.py  urls.py  views.py
horseshop/category/management/commands/: fill_db.py  fill_db1_categ.py  (+1 more)
horseshop/category/migrations/: 0001_initial.py  0002_subcategory_slug.py
horseshop/horseshop/: asgi.py  settings.py  urls.py  views.py  wsgi.py
horseshop/order/: admin.py  forms.py  models.py  urls.py  views.py
horseshop/order/migrations/: 0001_initial.py  0002_auto_20220511_1314.py  0003_alter_order_total_count.py  0004_alter_order_total_count.py  0004_remove_order_updated_at.py
horseshop/product/: admin.py  forms.py  models.py  urls.py  views.py
horseshop/product/fixtures/: product.json
horseshop/product/migrations/: 0001_initial.py  0002_auto_20220511_1736.py  0003_auto_20220511_1906.py  0004_auto_20220512_2049.py  0005_auto_20220520_1612.py  0006_product_image.py  0007_auto_20220522_1914.py  0008_auto_20220522_2304.py  0009_delete_productincartproperty.py  0010_auto_20220523_1942.py  0011_auto_20220527_1601.py
horseshop/product/tests/: test_product_model.py
horseshop/shopauth/: admin.py  apps.py  models.py  urls.py
horseshop/shopauth/migrations/: 0001_initial.py  0002_alter_shopuser_phone.py
horseshop/shopauth/tests/: test_shopuser_login.py  test_shopuser_register.py
horseshop/static/css/: main.css
horseshop/templates/: base.html  home.html  index.html
(+16 files in other folders)
