[tool.poetry]
name = "pythonbasic.2021-11.project"
version = "0.1.0"
description = ""
authors = ["Inna Sorina <sorina-inna@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.4"
pylint = "^2.13.7"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
